added nav and home layout

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -121,6 +121,10 @@ section {
   padding: 15px 30px !important;
 }
 
+.btn-signup {
+  padding: 5px !important;
+}
+
 .btn.btn-outline-white {
   border: 2px solid #fff;
   background: none;
